--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/richdunajewski/smsblast-frontend/issues"
   },
-  "homepage": "https://github.com/richdunajewski/smsblast-frontend#readme"
+  "homepage": "https://github.com/richdunajewski/smsblast-frontend#readme",
+  "dependencies": {
+    "body-parser": "^1.14.1",
+    "ejs": "^2.3.4",
+    "express": "^4.13.3"
+  }
 }
